fix: better spacing on page

--- a/src/shared/generic/PinLogin/PinLogin.scss
+++ b/src/shared/generic/PinLogin/PinLogin.scss
@@ -222,7 +222,6 @@
   margin-top: 0px;
   // Properties moved from the duplicate rule block:
   grid-template-columns: 1fr;
-  grid-template-rows: 20rem;
   width: 980px;
   margin-left: auto; // Use auto margins for centering block element
   margin-right: auto;
